--- a/package.json
+++ b/package.json
@@ -1,4 +1,35 @@
 {
+  "name": "dollar_exchange_api",
+  "version": "1.0.0",
+  "description": "A RESTful API for dollar exchange services with Flutterwave payment integration",
+  "main": "server.js",
+  "author": "Your Name <your.email@example.com>",
+  "license": "ISC",
+  "keywords": [
+    "dollar-exchange",
+    "api",
+    "nodejs",
+    "express",
+    "mongodb",
+    "flutterwave",
+    "payment",
+    "currency-exchange"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/yourusername/dollar_exchange_api.git"
+  },
+  "engines": {
+    "node": ">=14.0.0",
+    "npm": ">=6.0.0"
+  },
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "echo \"No linting configured\"",
+    "build": "echo \"No build process required\""
+  },
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
@@ -7,16 +38,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.2",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.1.0",
     "validator": "^13.11.0"
   },
-  "scripts": {
-    "start": "nodemon server.js"
-  },
-  "name": "dollar_exchange_api",
-  "version": "1.0.0",
-  "main": "server.js",
-  "author": "",
-  "license": "ISC",
-  "description": ""
+  "devDependencies": {
+    "nodemon": "^3.1.0"
+  }
 }
